--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "helmet": "^3.23.1",
+    "mongodb": "^3.5.9",
+    "mongodb-memory-server": "^6.6.1",
     "morgan": "^1.10.0"
   }
 }
